--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -13,7 +13,7 @@ mixin footer()
 						span 1500 
 						| рублей.
 					+e.IMG.img-count(src='img/@2x/count.jpg' alt='')
-				.col-lg-auto.col.text-right
+				.col-lg-auto.col.text-right.d-none.d-sm-block
 					+e.phone-block
 						+e.phone-img-wrap
 							img(src='img/@2x/f-phone.png' alt='')
