--- a/sourse/pug/blocks/s-offer/_s-offer.scss
+++ b/sourse/pug/blocks/s-offer/_s-offer.scss
@@ -1,7 +1,49 @@
 .s-offer {
+	background-color: #45B2D2;
 	padding: rem(50) 0 rem(80);
 	@include media-breakpoint-up(lg){
 		padding: rem(120) 0 rem(160);
+	}
+	.container{
+		position: relative;
+	}
+	.picture-bg{
+		img{
+			@include media-breakpoint-down(lg){
+				object-position: left;
+				display: none;
+			}
+		}
+	}
+	&__price-block{
+		@include media-breakpoint-down(lg){
+			display: none;
+		}
+		position: absolute;
+		top: rem(130);
+		right: rem(170);
+		width: rem(125);
+		height: rem(125);
+		border-radius: 50%;
+		background-color: $secondary;
+		box-shadow: 0px 8px 20px rgba(0,0,0,0.15);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+	&__price{
+		color: #fff;
+		font-weight: 700;
+		font-size: rem(28);
+		line-height: 1;
+		margin-bottom: rem(3);
+	}
+	&__subprice{
+		font-size: rem(20);
+		color: #fff;
+		font-weight: 700;
+		line-height: 1;
 	}
 	h2{
 		text-transform: uppercase;
