--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -1,31 +1,35 @@
 
 mixin mob-mnu()
-	+b.toggle-menu-mobile--js.d-xl-none
-		span
-	+b.menu-mobile--js.d-lg-none
+	+b.menu-mobile--js.d-xl-none
 		+b.toggle-menu-mobile--js
 			span
 		+e.inner
 		
-			+mnu()
+			+add-mnu()
 			.text-right
 	//  мобильное меню
 mixin top-nav() 
 	// start top-nav
-	+b.top-nav.block-with-lazy
+	+b.top-nav.static-style.block-with-lazy
 		.container
 			.row
-				.col-xl-auto.col
+				+e.img-col
 					+e.A.title-block(href='#')
 						+e.title
-							img.res-i(src='img/@2x/logo.png' alt='')
+							+e.IMG.fixed-img.res-i(src='img/@2x/logo.png' alt='')
+							+e.IMG.static-img.res-i(src='img/@2x/static-top.jpg' alt='')
 						+e.subtitle Для соревнований
-				.col.d-none.d-xl-block
+				+e.mnu-col
 					+mnu()
-				.col-xl-auto.col
+					+add-mnu()
+				+e.phone-col
 					+e.phone-block
 						+e.A.number(href='tel:+74951084614') +7 (495) 
 							span 108-46-14
 						+e.time с 09:00 до 22:00
+				+e.btn-col.col-auto.d-xl-none
+					+b.toggle-menu-mobile--js
+						span
+				
 					
 	// end top-nav
