--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -19,7 +19,7 @@ include ../blocks/s-order/_s-order.pug
 include ../blocks/s-list/_s-list.pug
 
 block pagecontent
- 
+	+phone-btn
 	+mob-mnu()
 	+header()
 		+top-nav()
