--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -1,5 +1,8 @@
 .header-block {
-	padding: rem(180) 0 rem(130);
+	padding: rem(130) 0 rem(80);
+	@include media-breakpoint-up(lg){
+		padding: rem(180) 0 rem(130);
+	}
 	display: block;
 	
 	&__main-wrap{
@@ -30,7 +33,9 @@
 		box-shadow: 0px rem(8) rem(20) rgba(0,0,0,0.1);
 	}
 	&__price-block{
-		
+		@include media-breakpoint-down(md){
+			margin-top: rem(-90);
+		}
 		@include media-breakpoint-up(lg){
 			margin-bottom: rem(45);
 		}
