--- a/sourse/pug/blocks/s-offer/_s-offer.pug
+++ b/sourse/pug/blocks/s-offer/_s-offer.pug
@@ -3,6 +3,9 @@ mixin s-offer()
 	+b.SECTION.s-offer.bg-wrap.section#s-offer&attributes(attributes)
 		+pic('offer-bg.jpg','bg')(class='picture-bg')
 		.container
+			+e.price-block
+				+e.price 1500
+				+e.subprice рублей
 			h2 Что мы предлагаем?
 			+e.text Мы предлагаем облегчённый вариант получения данного документа, который не отнимет у вас много времени и сил.
 			+e.text--white Достаточно заполнить заявку прямо на сайте или позвонить по указанному номеру и СПРАВКА&nbsp;ДЛЯ СОРЕВНОВАНИЙ будет у Вас на&nbsp;руках 
