--- a/sourse/pug/blocks/s-plus/_s-plus.scss
+++ b/sourse/pug/blocks/s-plus/_s-plus.scss
@@ -3,6 +3,13 @@
 		padding: rem(90) 0 rem(60);
 	}
 	padding: rem(45) 0 rem(60);
+	.picture-bg{
+		img{
+			@include media-breakpoint-down(lg){
+				object-position: right;
+			}
+		}
+	}
 	h2{
 		font-weight: 900;
 		text-transform: uppercase;
