--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,5 +1,4 @@
 .top-nav {
-	padding: rem(18) 0;
 	position: absolute;
 	top: 100%;
 	width: 100%;
@@ -7,103 +6,202 @@
 	@include mt;
 	top: 0;
 	left: 0;
-	
 	&.fixed {
 		position: fixed;
 		width: 100%;
 		bottom: auto;
 		margin-top: 0;
+	}
+	
+		&.static-style{
+		padding: rem(18) 0;
+		
+		.row{
+			align-items: center;
+		}
+		.top-nav{
+			&__img-col{
+				@extend .col;
+				@extend .col-xl-auto;
+			}
+			&__mnu-col{
+				@extend .col;
+				@extend .d-none;
+				@extend .d-xl-block;
+			}
+			&__phone-col{
+				@extend .d-none;
+				@extend .d-sm-block;
+				@extend .col;
+				@extend .col-xl-auto;
+			}
+			&__static-img{
+				display: none;
+			}
+			&__nav {
+				display: flex;
+				justify-content: space-around;
+				text-align: center;
+				list-style-type: none;
+				margin-bottom: rem(20);
+				&.fixed-nav{
+					display: none;
+				}
+			}
+		
+			&__item {
+				display: inline-block;
+				list-style-type: none;
+				margin-left: rem(5);
+				margin-right: rem(5);
+			}
+			&__link{
+				font-size: rem(16);
+				color: $body-color;
+				&:hover{
+					color: #000;
+					text-decoration: none;
+				}
+			}
+			&__title-block{
+				color: $body-color;
+				&:hover{
+					color: $body-color;
+					text-decoration: none;
+				}
+			}
+			&__title{
+				@include media-breakpoint-up(sm){
+					margin-bottom: rem(5);
+				}
+				display: block;
+				img{
+					// @include media-breakpoint-down(sm){
+					// 	max-width: 60%;
+					// }
+				}
+			}
+			&__subtitle{
+				line-height: 1;
+				display: block;
+				@include media-breakpoint-down(xs){
+					font-size: rem(12);
+				}
+				font-size: rem(16);
+			}
+			&__phone-block{
+				@include media-breakpoint-down(xs){
+					padding-top: rem(10);
+				}
+				text-align: right;
+			}
+			&__number{
+				font-size: rem(14);
+				@include media-breakpoint-up(sm){
+					font-size: rem(20);
+					padding-top: rem(3);
+				}
+				@include media-breakpoint-up(md){
+					font-size: rem(29);
+					padding-top: rem(5);
+				}
+				font-weight: 300;
+				display: block;
+				line-height: 1;
+				margin-bottom: rem(5);
+				@extend .mono;
+				color: $body-color;
+				span{
+					font-weight: 900;
+				}
+				&:hover{
+					color: $primary;
+					text-decoration: none;
+				}
+			}
+			&__time{
+				@include media-breakpoint-down(xs){
+					font-size: rem(12);
+					margin-top: rem(5);
+				}
+				line-height: 1;
+				font-size: rem(16);
+			}
+		}
+	}
+
+	&.fixed-style{
+		@include media-breakpoint-down(lg){
+			padding: rem(10) 0;
+		}
 		background-color: #39AECF;
+		.row{
+			@include roww(15);
+		}
+		.top-nav{
+			&__btn-col{
+				display: flex;
+				align-items: center;
+			}
+			&__img-col{
+				display: flex;
+				align-items: center;
+				@extend .col-xl-auto;
+				@extend .col;
+			}
+			&__mnu-col{
+				@extend .d-none;
+				@extend .d-xl-block;
+				@extend .col;
+			}
+			&__phone-col{
+				@extend .d-none;
+			}
+			&__fixed-img{
+				display: none;
+			}
+			&__subtitle{
+				display: none;
+			}
+			.row{
+				align-items: center;
+			}
+			&__nav{
+				li{
+					text-align: center;
+					text-transform: uppercase;
+					font-size: rem(12);
+					font-weight: 700;
+					flex-grow: 1;
+					&:not(:last-child){
+						padding: rem(10) 0;
+					}
+					&:last-child{
+						background-color: $secondary;
+						a{
+							padding: rem(10) 0;
+							display: block;
+
+						}
+					}
+					
+				}
+				margin-bottom: 0;
+				display: flex;
+				list-style: none;
+				&.static-nav{
+					display: none;
+				}
+			}
+			&__link{
+				height: 100%;
+			}
+		}
+		a{
+			color: #FFF;
+		}
 	}
 
-	.row{
-		align-items: center;
-	}
-
-	&__nav {
-		display: flex;
-		justify-content: space-around;
-		text-align: center;
-		list-style-type: none;
-		margin-bottom: rem(20);
-	}
-
-	&__item {
-		display: inline-block;
-		list-style-type: none;
-		margin-left: rem(5);
-		margin-right: rem(5);
-	}
-	&__link{
-		font-size: rem(16);
-		color: $body-color;
-		&:hover{
-			text-decoration: none;
-		}
-	}
-	&__title-block{
-		color: $body-color;
-		&:hover{
-			color: $body-color;
-			text-decoration: none;
-		}
-	}
-	&__title{
-		@include media-breakpoint-up(sm){
-			margin-bottom: rem(5);
-		}
-		display: block;
-		img{
-			// @include media-breakpoint-down(sm){
-			// 	max-width: 60%;
-			// }
-		}
-	}
-	&__subtitle{
-		line-height: 1;
-		display: block;
-		@include media-breakpoint-down(xs){
-			font-size: rem(12);
-		}
-		font-size: rem(16);
-	}
-	&__phone-block{
-		@include media-breakpoint-down(xs){
-			padding-top: rem(10);
-		}
-		text-align: right;
-	}
-	&__number{
-		font-size: rem(14);
-		@include media-breakpoint-up(sm){
-			font-size: rem(20);
-			padding-top: rem(3);
-		}
-		@include media-breakpoint-up(md){
-			font-size: rem(29);
-			padding-top: rem(5);
-		}
-		font-weight: 300;
-		display: block;
-		line-height: 1;
-		margin-bottom: rem(5);
-		@extend .mono;
-		color: $body-color;
-		span{
-			font-weight: 900;
-		}
-		&:hover{
-			text-decoration: none;
-		}
-	}
-	&__time{
-		@include media-breakpoint-down(xs){
-			font-size: rem(12);
-			margin-top: rem(5);
-		}
-		line-height: 1;
-		font-size: rem(16);
-	}
 
 	// 
 	@include media-breakpoint-up(xl) {}
@@ -150,11 +248,9 @@ $h: em(2);
 .toggle-menu-mobile {
 	display: block;
 	height: $h* 14;
-	margin-left: 0;
-	position: fixed;
+	margin: auto;
+	position: relative;
 	z-index: 999 !important;
-	right: 0;
-	top: rem(30);
 	padding: 3px;
 	border-radius: 5px;
 
@@ -227,12 +323,12 @@ $h: em(2);
 	top: 0;
 	// left: 0;
 	right: 0;
-	transform: translate(100%, 0);
+	transform: translate(120%, 0);
 	@include mt(.6);
 	will-change: transform;
 
 	&__inner {
-		background-color: #c3c3c3;
+		background-color: #fff;
 		padding: 5% 0;
 		overflow-y: auto;
 		-webkit-overflow-scrolling: touch;
@@ -240,7 +336,7 @@ $h: em(2);
 	}
 
 	&.active {
-		// transform: translate(0, 0);
+		transform: translate(0, 0);
 
 		.toggle-menu-mobile {
 			opacity: 1;
