--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -488,7 +488,10 @@ a{
 		box-shadow: 0px rem(12) rem(20) rgba(0,0,0,0.15);
 		background: linear-gradient(to bottom,#E64C3C ,#E64C3C 100%);
 	}
-	&::after{
+}
 
+h2{
+	@include media-breakpoint-down(sm){
+		font-size: rem(34) !important;
 	}
 }
