--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -2,7 +2,7 @@ extends layout/main.pug
 block variables
 	- let  mainPage= null
 block title
-	- let  title= 'title'
+	- let  title= 'Медицинская справка для участия в соревнованиях. Оформление в Москве за 1 день.'
 	title= title
 
 
