--- a/sourse/pug/blocks/s-contact/_s-contact.pug
+++ b/sourse/pug/blocks/s-contact/_s-contact.pug
@@ -14,7 +14,7 @@ mixin s-contact()
 						+e.btn.btn(type="submit") Задать вопрос
 				.col-xl.col-md-6.order-md-last
 					+e.map-block
-						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1bf0de8e03fa9fb38de02c71bbd4bb643cffa243a76c42153c8df8bfdd80198b&amp;source=constructor" width="405" height="360" frameborder="0"></iframe>
+						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A1bf0de8e03fa9fb38de02c71bbd4bb643cffa243a76c42153c8df8bfdd80198b&amp;source=constructor" width="405" height="360"></iframe>
 				.col-xl-auto.col-md-6
 					+e.item
 						+e.item-title Позвонить нам
