--- a/sourse/pug/blocks/s-garant/_s-garant.pug
+++ b/sourse/pug/blocks/s-garant/_s-garant.pug
@@ -1,6 +1,6 @@
 mixin s-garant()
 	// start s-garant
-	+b.SECTION.s-garant.section#s-garant&attributes(attributes)
+	+b.s-garant.section#s-garant&attributes(attributes)
 		.container
 			+e.main-block
 				+e.text Официальная справка для соревнований на Ваше имя будет зафиксирована в общем документообороте системы здравоохранения. Документ выдержит любые проверки, в том числе и запросы по факсу.
