--- a/sourse/pug/blocks/s-order/_s-order.pug
+++ b/sourse/pug/blocks/s-order/_s-order.pug
@@ -28,7 +28,7 @@ mixin s-order()
 						+input('Адрес прописки или регистрации')
 						+input('Серия и номер полиса ОМС (при наличии)')
 						+input('Введите номер телефона*')
-						+input('Место достаки (станция метро или адрес), джелаемое время','texarea')
+						+input('Место достаки (станция метро или адрес), джелаемое время','textarea')
 						+e.btn.btn(type="submit") Оформить заявку
 						+e.add * - обязательные поля
 	// end s-order
