--- a/sourse/pug/blocks/s-list/_s-list.pug
+++ b/sourse/pug/blocks/s-list/_s-list.pug
@@ -1,7 +1,7 @@
 mixin s-list()
 	// start s-list
 	+b.SECTION.s-list.bg-wrap.section#s-list&attributes(attributes)
-		<div class="parallax-window" data-parallax="scroll" data-image-src="/img/@2x/list-bg.jpg"></div>
+		<div class="parallax-window" data-parallax="scroll" data-image-src="img/@2x/list-bg.jpg"></div>
 		.container
 			h2 ДРУГИЕ СПРАВКИ 
 				span КОТОРЫЕ МЫ ОФОРМЛЯЕМ
