--- a/sourse/pug/blocks/s-rew/_s-rew.pug
+++ b/sourse/pug/blocks/s-rew/_s-rew.pug
@@ -1,7 +1,7 @@
 mixin s-rew()
 	// start s-rew
 	+b.SECTION.s-rew.bg-wrap.section#s-rew&attributes(attributes)
-		<div class="parallax-window" data-parallax="scroll" data-image-src="/img/@2x/rew-bg.jpg"></div>
+		<div class="parallax-window" data-parallax="scroll" data-image-src="img/@2x/rew-bg.jpg"></div>
 		.container
 			h2 
 				span Отзывы клиентов 
