--- a/sourse/pug/blocks/header-block/_header-block.pug
+++ b/sourse/pug/blocks/header-block/_header-block.pug
@@ -17,5 +17,5 @@ mixin header-block()
 							+e.subprice рублей
 						+e.side-title Вы получите
 						+e.text ОФИЦИАЛЬНЫЙ ДОКУМЕНТ, заполненный в соответствии с&nbsp;Вашими требованиями, указанными в заявке.
-				+e.btn(href='#') Заказать справку
+				+e.btn.scroll-link(href='#s-form') Заказать справку
 	// end header-block
