--- a/sourse/pug/blocks/s-how-work/_s-how-work.pug
+++ b/sourse/pug/blocks/s-how-work/_s-how-work.pug
@@ -16,7 +16,7 @@ mixin s-how-work()
 						+e.A.phone(href='tel:+74951084614') +7 (495) 
 							span 108-46-14
 						p или оформляете заявку с сайта
-						+e.btn.btn(href='#') Оформить заявку
+						+e.btn.btn.scroll-link(href='#s-order') Оформить заявку
 						+e.light-text Прием заявок через форму заказа осуществляется ежедневно без выходных и праздничных дней. Круглосуточно.
 				.col-xl-3.col-md-6
 					+e.item--line
