--- a/sourse/pug/blocks/s-offer/_s-offer.pug
+++ b/sourse/pug/blocks/s-offer/_s-offer.pug
@@ -12,7 +12,7 @@ mixin s-offer()
 				strong в течение суток !
 			.row
 				.col-md
-					+e.btn.btn(href='#') Заказать справку
+					+e.btn.btn.scroll-link(href='#s-order') Заказать справку
 				.col-md-auto
 					+e.or или
 				.col-md
