--- a/sourse/pug/blocks/s-plus/_s-plus.pug
+++ b/sourse/pug/blocks/s-plus/_s-plus.pug
@@ -60,5 +60,5 @@ mixin s-plus()
 										+e.item-title Удобные
 										+e.item-descr способы оплаты для&nbsp;Вашего&nbsp;заказа
 							.col-md-6
-								+e.btn.btn(href='#') Заказать справку на спорт
+								+e.btn.btn.scroll-link(href='#s-order') Заказать справку на спорт
 	// end s-plus
