--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -4,8 +4,8 @@ mixin footer()
 			.row
 				.col-lg-auto.col
 					a(href='#')
-						+e.title
-							img.res-i(src='img/@2x/footer-logo.jpg' alt='')
+						+e.logo-title spravka
+								span sport.net
 						+e.subtitle Для соревнований
 				.col.d-none.d-lg-block
 					+e.text Медсправка для соревнований
