--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -16,8 +16,10 @@ mixin top-nav()
 				+e.img-col
 					+e.A.title-block(href='#')
 						+e.title
-							+e.IMG.fixed-img.res-i(src='img/@2x/logo.png' alt='')
-							+e.IMG.static-img.res-i(src='img/@2x/static-top.jpg' alt='')
+							+e.fixed-title.logo-title spravka
+								span sport.net
+							+e.static-title.logo-title spravka
+								span sport.net
 						+e.subtitle Для соревнований
 				+e.mnu-col
 					+mnu()
