--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -3,101 +3,143 @@
   background-color: #3499CD;
   border-top: rem(2) solid #00A9EC;
   color: #fff;
-	.row{
-    @include media-breakpoint-up(xl){
+
+  .row {
+    @include media-breakpoint-up(xl) {
       @include roww(50);
     }
   }
-  a{
+
+  a {
     color: #fff;
-    &:hover{
+
+    &:hover {
       text-decoration: none;
     }
   }
-  &__title{
+
+  &__title {
     margin-bottom: rem(5);
-    img{
-      @include media-breakpoint-down(md){
+
+    img {
+      @include media-breakpoint-down(md) {
         max-width: 60%;
       }
     }
   }
-  &__text{
-    span{
+
+  &__logo-title {
+    display: inline-block;
+    text-transform: uppercase;
+    font-weight: 700;
+    position: relative;
+    z-index: 2;
+    font-size: rem(29);
+
+    @include media-breakpoint-up(lg) {
+    }
+
+    span {
+      margin-left: rem(23);
+    }
+
+    &::after {
+      z-index: -1;
+      content: '';
+      @include a-cent(y);
+      left: 41%;
+      width: rem(34);
+      height: rem(34);
+
+      background-image: url(../img/@2x/logo3.png);
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+  }
+
+  &__text {
+    span {
       color: $secondary;
       font-size: rem(22);
       font-weight: 700;
     }
   }
-  &__subtitle{
-    @include media-breakpoint-down(md){
+
+  &__subtitle {
+    @include media-breakpoint-down(md) {
       font-size: rem(14);
     }
   }
-  
 
-  
-  &__phone-block{
+
+
+  &__phone-block {
     display: flex;
     align-items: center;
     justify-content: flex-end;
   }
-  &__phone-img-wrap{
+
+  &__phone-img-wrap {
     margin-right: rem(10);
   }
-  &__number{
-    font-size: rem((29 * 0.6));
-    @include media-breakpoint-up(lg){
+
+  &__number {
+    font-size: rem(26);
+    
+    @include media-breakpoint-up(lg) {
       font-size: rem(29);
     }
+
     @extend .mono;
-    span{
+
+    span {
       font-weight: 900;
     }
   }
-  &__time{
-    @include media-breakpoint-down(md){
+
+  &__time {
+    @include media-breakpoint-down(md) {
       font-size: rem(14);
     }
   }
 
 
-// 
-@include media-breakpoint-up(xl) {}
+  // 
+  @include media-breakpoint-up(xl) {}
 
-@include media-breakpoint-up(lg) {}
+  @include media-breakpoint-up(lg) {}
 
-@include media-breakpoint-up(md) {}
+  @include media-breakpoint-up(md) {}
 
-@include media-breakpoint-up(sm) {}
+  @include media-breakpoint-up(sm) {}
 
-@include media-breakpoint-up(xs) {}
-
-
-// 
-@include media-breakpoint-between(md, xl) {}
+  @include media-breakpoint-up(xs) {}
 
 
-// 
-@include media-breakpoint-only(xs) {}
-
-@include media-breakpoint-only(sm) {}
-
-@include media-breakpoint-only(md) {}
-
-@include media-breakpoint-only(lg) {}
-
-@include media-breakpoint-only(xl) {}
+  // 
+  @include media-breakpoint-between(md, xl) {}
 
 
-// 
-@include media-breakpoint-down(xl) {}
+  // 
+  @include media-breakpoint-only(xs) {}
 
-@include media-breakpoint-down(lg) {}
+  @include media-breakpoint-only(sm) {}
 
-@include media-breakpoint-down(md) {}
+  @include media-breakpoint-only(md) {}
 
-@include media-breakpoint-down(sm) {}
+  @include media-breakpoint-only(lg) {}
 
-@include media-breakpoint-down(xs) {}
+  @include media-breakpoint-only(xl) {}
+
+
+  // 
+  @include media-breakpoint-down(xl) {}
+
+  @include media-breakpoint-down(lg) {}
+
+  @include media-breakpoint-down(md) {}
+
+  @include media-breakpoint-down(sm) {}
+
+  @include media-breakpoint-down(xs) {}
 }
