--- a/sourse/pug/pages/01-thanks.pug
+++ b/sourse/pug/pages/01-thanks.pug
@@ -21,20 +21,8 @@ include ../blocks/s-list/_s-list.pug
 block pagecontent
 	+phone-btn
 	+mob-mnu()
-	+header()
-		+top-nav()
-		+header-block('main')
-	+s-form()
-	+s-question('1')
-	+s-question('2')
-	+s-offer()
-	+s-garant()
-	+s-plus()
-	+s-today()
-	+s-how-work()
-	+s-rew()
-	+s-order()
-	+s-list()
-	+s-contact()
+	//- +header()
+	+top-nav()
+	+header-block('thanks')
 	+footer()
 
