--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -1,4 +1,6 @@
 .header-block {
+	flex-grow: 1;
+	height: 100%;
 	padding: rem(130) 0 rem(80);
 	@include media-breakpoint-up(lg){
 		padding: rem(180) 0 rem(130);
@@ -13,6 +15,7 @@
 			text-align: center;
 		}
 		font-weight: 900;
+		text-transform: uppercase;
 		margin-bottom: rem(25);
 		span{
 			color: $primary;
@@ -77,7 +80,22 @@
 		max-width: rem(305);
 	}
 
-
+	.thanks{
+		max-width: unset;
+		text-align: center;
+		@include media-breakpoint-up(lg){
+			padding-left: rem(100);
+			text-align: left;
+		}
+		h1{
+			margin-bottom: rem(25);
+		}
+		.header-block{
+			&__text{
+				margin-bottom: rem(125);
+			}
+		}
+	}
 	@include media-breakpoint-up(xl) {}
 
 	@include media-breakpoint-up(lg) {}
