--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -500,3 +500,12 @@ h2{
 		font-size: rem(34) !important;
 	}
 }
+
+.main-wrapper{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	.header{
+		flex-grow: 1;
+	}
+}
