--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -6,21 +6,22 @@ mixin s-form()
 			+e.out-wrap
 				h3 Оформить заявку
 				+form-wrap
+					+input('','hidden','','order')(value='форма на синем фоне')
 					.row
 						.col-lg-4.col-md-6
-							+input('Фамилия, Имя, Отчество*')
+							+input('Фамилия, Имя, Отчество*','','','name')(required)
 						.col-lg-4.col-md-6
-							+input('Дата рождения')
+							+input('Дата рождения','','','date')
 						.col-lg-4.col-md-6
-							+input('Вид спорта / соревнований')
+							+input('Вид спорта / соревнований','','','sport')
 						.col-lg-4.col-md-6
-							+input('Адрес прописки или регистрации')
+							+input('Адрес прописки или регистрации','','','adress')
 						.col-lg-4.col-md-6
-							+input('Серия и номер полиса ОМС (при наличии)')
+							+input('Серия и номер полиса ОМС (при наличии)','','','polis')
 						.col-lg-4.col-md-6
-							+input('Введите номер телефона')
+							+input('Введите номер телефона','tel','','tel')(required)
 						.col-md-8
-							+input('Место доставки (станция метро или адрес), желаемое время','textarea')
+							+input('Место доставки (станция метро или адрес), желаемое время','textarea','','place')
 						.col-md-4
 							+e.btn.btn(type='submit') Оформить заявку
 				+e.text * - обязательные поля
