--- a/sourse/pug/blocks/s-order/_s-order.pug
+++ b/sourse/pug/blocks/s-order/_s-order.pug
@@ -22,13 +22,14 @@ mixin s-order()
 							p Документ содержит название спортивной секции, в соревнованиях которой вы планируете учавствовать. В справке будет указано, что вы допускаетесь для участия в соревнованиях той секции, которую вы впишите в заявке.
 				.col-xl-4
 					+form-wrap
-						+input('Фамилия, Имя, Отчество*')
-						+input('Дата рождения')
-						+input('Вид спорта / соревнований')
-						+input('Адрес прописки или регистрации')
-						+input('Серия и номер полиса ОМС (при наличии)')
-						+input('Введите номер телефона*')
-						+input('Место достаки (станция метро или адрес), джелаемое время','textarea')
+						+input('','hidden','','order')(value='форма из блока "Оформите заявку прямо сейчас"')
+						+input('Фамилия, Имя, Отчество*','','','name')(required)
+						+input('Дата рождения','','','date')
+						+input('Вид спорта / соревнований','','','sport')
+						+input('Адрес прописки или регистрации','','','adress')
+						+input('Серия и номер полиса ОМС (при наличии)','','','polis')
+						+input('Введите номер телефона*','tel','','tel')(required)
+						+input('Место достаки (станция метро или адрес), джелаемое время','textarea','','place')
 						+e.btn.btn(type="submit") Оформить заявку
 						+e.add * - обязательные поля
 	// end s-order
